<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endHeader"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:text="@string/scoreHeader"
            android:textAlignment="center"
            android:textColor="#2196F3"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/lastMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:paddingBottom="30dip"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/btnExit"
            android:textSize="36sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>