<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcomeText"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textColorLink="#03A9F4"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/NameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="140dip"
            android:gravity="center"
            android:text="@string/askNameView"
            android:textAlignment="center"
            android:textColor="#2196F3"
            android:textColorLink="#2196F3"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dip"
            android:layout_marginTop="10dip"
            android:layout_marginEnd="60dip"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorLink="#2196F3"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnStartQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dip"
            android:layout_marginTop="20dip"
            android:layout_marginEnd="100dip"
            android:fontFamily="sans-serif-black"
            android:text="@string/btnStartQuiz"
            android:textColor="#3F51B5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>