<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dip"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/startQuizView"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#3F51B5"
                android:textColorLink="#000000"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:text="@string/userNameView"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/scoreView"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/scoreView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/questionNum"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/questionNum"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dip"
            android:layout_marginBottom="10dip">

            <TextView
                android:id="@+id/questionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:minHeight="50dip"
                android:textAlignment="center"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="10dip">

            <Button
                android:id="@+id/btnOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@drawable/rounded_corners"
                android:gravity="center"
                android:minHeight="60dp"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip">

            <Button
                android:id="@+id/btnOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_span="2"
                android:background="@drawable/rounded_corners"
                android:gravity="center"
                android:minHeight="60dp"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip">

            <Button
                android:id="@+id/btnOption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_span="2"
                android:background="@drawable/rounded_corners"
                android:gravity="center"
                android:minHeight="60dp"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnOption4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_span="2"
                android:background="@drawable/rounded_corners"
                android:gravity="center"
                android:minHeight="60dp"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>